[package]
name = "dotpro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dotpro"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rayon = "1.10"
nalgebra = "0.33.0"
numpy = "0.21.0"

[features]
extension-module = ["pyo3/extension-module"]
